api: add access_groups routes
